# CellForgeStudio

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
AboutViewer/: AboutViewer.csproj  App.xaml  App.xaml.cs  CMakeLists.txt  MainWindow.xaml  MainWindow.xaml.cs
HelpViewer/: App.xaml  App.xaml.cs  CMakeLists.txt  HelpViewer.csproj  MainWindow.xaml  MainWindow.xaml.cs
Studio/: CMakeLists.txt
Studio/cmake/: FindCellForge.cmake
Studio/help/: index.html
Studio/include/: README.md
Studio/src/: main.cpp  test_about.cpp
WpfBridge/: Bridge.cpp  Bridge.h  CMakeLists.txt  WpfBridge.vcxproj  pch.h
WpfControls/: AboutControl.xaml  AboutControl.xaml.cs  AboutWindow.xaml  AboutWindow.xaml.cs  CMakeLists.txt  Controls.cs  HelpControl.xaml  HelpControl.xaml.cs  WpfControls.csproj
widgets/: Program.cs  widgets.csproj
